--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -7296,3 +7296,37 @@
     }
   }
 }
+
+.success {
+  &-wrapper {
+    background-color: $bgc-pink;
+    border-radius: 12px;   
+    box-shadow: 0px 6px 30px 0px rgba(43, 47, 137, 0.15);
+    padding: 48px 60px 60px 60px;
+
+    @media (max-width: 768px) {
+      padding: 38px 50px 50px 50px;
+    }
+
+    @media (max-width: 599px) {
+      padding: 37px 48px 48px 37px;
+    }
+  }
+
+  &-title {
+    color: #FFF;
+    @include fz(32);
+    @include ls(0.96);  
+    font-weight: 600;
+    line-height: 145.938%;   
+    text-transform: uppercase;
+    margin-bottom: 46px;
+
+    @media (max-width: 599px) {
+      @include fz(22);
+      @include ls(0.66);
+      margin-bottom: 24px;
+      align-self: flex-start;          
+    }
+  }
+}
